add cname, update about

--- a/data/about.yml
+++ b/data/about.yml
@@ -4,7 +4,7 @@ description: >
   Located in the capital of North Macedonia, Kokos Production is a video production company covering all phases of production from development, pre-production, production to post-production with high dedication in each phase offering quality final products as a video, photography, animation, multimedia or visual arts.
   <br>
   <br>
-image   : images/about/about-company.jpg
+image   : images/logo.png
 aboutItem:
   - title : Why Choose Us
     description: > 
