--- a/data/contact.yml
+++ b/data/contact.yml
@@ -1,7 +1,7 @@
 enable  : true
 contactFormTitle    : CONTACT US
 contactFormSubtitle : >
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, ea! consectetur adipisicing elit. Dolore, ea!
+  For any inquiry
 mapTitle    : FIND US
 mapSubtitle : >
   Si aute quis eu proident o cupidatat ne anim nescius, et est praesentibus, o quorum vidisse expetendis, nostrud eram quibusdam ad nam nostrud ubi.
