--- a/config.toml
+++ b/config.toml
@@ -54,7 +54,7 @@ defaultContentLanguage = "en"
     # Google Analitycs
     googleAnalitycsID = "Your ID"
     # contact form action
-    contactFormAction = "#" # contact form works with https://formspree.io
+    contactFormAction = "https://formspree.io/f/xeqvndav" # contact form works with https://formspree.io
     
     # Banner Section
     [params.banner]
