--- a/config.toml
+++ b/config.toml
@@ -18,10 +18,10 @@ defaultContentLanguage = "en"
     name    = "About"
     url     = "about"
     weight  = 2
-    [[menu.main]]
-    name    = "Gallery"
-    url     = "gallery"
-    weight  = 3
+#    [[menu.main]]
+#    name    = "Gallery"
+#    url     = "gallery"
+#    weight  = 3
     [[menu.main]]
     name    = "Contact"
     url     = "contact"
