--- a/data/about.yml
+++ b/data/about.yml
@@ -1,7 +1,16 @@
 enable  : true
 title   : WHO ARE WE
 description: >
-  Located in the capital of North Macedonia, Kokos Production is a video production company covering all phases of production from development, pre-production, production to post-production with high dedication in each phase offering quality final products as a video, photography, animation, multimedia or visual arts.
+  KOKOS is a video and media production company based in Skopje, Macedonia.
+  <br>
+  <br>
+  Our team of media experts participates in all phases of the creative development of the products: from ideation to pre-production to post-production.
+  <br>
+  <br>
+  More than 10 years of combined experience has earned us trust from numerous clients. Some of these are: Macedonian Ministry of Culture, UEFA, foreign embassies in Macedonia, Mladinski Kulturen Centar in Skopje (Youth Cultural Center), D-Festival, Taksirat Festival and more.
+  <br>
+  <br>
+  Use the <a href="https://kokosproduction.mk/contact#contact-section">Contact Form</a> or call us directly for inquiries in any field of media production, from developing your company identity and branding, developing the backbone of your media campaign, to video-documenting your event.
   <br>
   <br>
 image   : images/logo.png
